# InsightForge

./: .env.example  .gitignore  CLAUDE.md  FUTURE_WORK.md  IMPROVEMENTS.md  ISSUES.md  PERF_IMPROVEMENTS.md  QUALITY_ISSUES.md  README.md  TUNING.md  architecture.md  execution_log.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  view.sh
config/: default.yaml
config/presets/: educational.yaml  entertainment.yaml
docs/: ARCHITECTURE.md  HTML_AI_CHAT_ARCHITECTURE.md  HTML_VIEWER_ARCHITECTURE.md  LOGGING_AND_TROUBLESHOOTING.md  STORAGE_ARCHITECTURE.md  html_viewer_transcript_sync.md
insightforge/: __init__.py  audio.py  cli.py  pipeline.py  viewer_server.py
insightforge/llm/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py  router.py
insightforge/models/: __init__.py  chunk.py  frame.py  output.py  scoring.py  transcript.py  video.py
insightforge/stages/: alignment.py  chunking.py  formatter.py  frames.py  importance.py  ingestion.py  llm_processing.py  transcript.py
insightforge/storage/: __init__.py  html_export.py  paths.py  writer.py
insightforge/utils/: __init__.py  config.py  ffmpeg.py  logging.py  vision.py
llm_testing/: README.md
llm_testing/scripts/: bench_llm.py  bench_vlm.py  bench_whisper.py  run_all.py
tests/: conftest.py
tests/fixtures/: sample_config.yaml  sample_transcript.json
tests/integration/: test_pipeline_short.py
tests/unit/: test_alignment.py  test_audio.py  test_chunking.py  test_cli.py  test_config.py  test_formatter.py  test_frames.py  test_html_export.py  (+10 more)
