[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insightforge"
version = "0.1.0"
description = "Local-first YouTube Knowledge Extractor — converts YouTube URLs into structured Markdown notes with timestamped screenshots"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["youtube", "llm", "notes", "transcript", "ollama"]
dependencies = [
    "yt-dlp>=2024.1.0",
    "faster-whisper>=1.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.7.0",
    "nltk>=3.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.12",
]

[project.scripts]
insightforge = "insightforge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["insightforge"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (may require external services)",
]
